4.0.1 / xxx
 * Fixed bug causing the application to crash during account database
   initialisation.

4.0.0 / 2014-12-17
 * Fixed issues with message sorting.
 * Fixed double-click attachment opening by default application on Windows.
 * Improvements in message send procedure.
 * Proxy dialogue supports HTTP proxy configuration. Application can use HTTP
   proxies to download CRLs.
 * Fixed bug which was preventing the application to send messages with
   multiple attachments.
 * Message years are shown in descending order.
 * Improvements in debugging messages.
 * Credits and licence files are displayed on OS X and Unix-like systems.
 * Datovka can be build using OS X SDK 10.7.
 * CRL is checked when message displayed.
 * Main window icon resolution is now 48x48.
 * Added high-resolution Datovka icons.
 * Added .desktop file.

0.2.0 / 2014-11-27
 * Added PostSignum Qualified CA 3 certificate.
 * CA store can be initialised using a single PEM file.
 * Fixes in account search dialog.
 * Complete message download runs in a separate thread.
 * Signature details dialog shows certificate information.
 * Time-stamp certificates are being validated.
 * Fixes in OS X and Windows building procedures.
 * Application cannot be exited while download in progress.
 * Application can be run without storing database on file system.
 * Message list shows whether attachments have been downloaded.
 * Message processing state can be set. It is displayed in message list.
 * Application downloads, verifies and uses a CRL.
 * Fixed come Czech translations.
 * Automatic check for new application version.
 * Added status information.
 * Application remembers the last viewed message.
 * Additional bug fixes.

0.1.0 / 2014-10-15
 * Initial testing release.